--- a/DOM/css/dom_ejercicios.css
+++ b/DOM/css/dom_ejercicios.css
@@ -143,3 +143,29 @@ img{
     visibility: hidden;
     opacity: 0;
 }
+/*****+* dark theme butoon ********************/
+.dark-theme-btn{
+    position: fixed;
+    z-index:999;
+    bottom: 1vh;
+    left: 1vw;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    font-weight: bold;
+    background-color: var(--main-color);
+    font-size: 2rem;
+    color: var(--second-color);
+    outline: 0;
+    border: 0;
+    transition: 0.3s all ease-out;
+    cursor: pointer;
+}
+.dark-theme-btn:hover{
+    background-color: var(--second-color);
+    color: var(--main-color);
+}
+.dark-mode{
+    background: var(--second-color);
+    color: var(--main-color);
+}
