--- a/DOM/css/dom_ejercicios.css
+++ b/DOM/css/dom_ejercicios.css
@@ -169,3 +169,21 @@ img{
     background: var(--second-color);
     color: var(--main-color);
 }
+/************** Network Status ***********/
+.online,
+.offline{
+    top: 0;
+    position: sticky;
+    z-index: 1000;
+    padding: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: #1b5e20;
+    color: #fff;
+    transition: 0.3s all ease;
+}
+
+.offline{
+    background: red;
+}
