--- a/DOM/css/dom_ejercicios.css
+++ b/DOM/css/dom_ejercicios.css
@@ -35,6 +35,7 @@ img{
     top: 0;
     padding: 1rem;
     color: var(--second-color);
+    z-index: 997;
 }
 
 .header h1{
@@ -188,7 +189,7 @@ img{
 .offline{
     background: red;
 }
-/************** Network Status ***********/
+/************** FIlter ***********/
 .cards{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
@@ -210,4 +211,105 @@ img{
     visibility: hidden;
     opacity: 0;
     order: 1;
+}
+/************** Responsive slider ***********/
+.slider{
+    position: relative;
+    width: 80%;
+    margin: 1rem auto;
+    text-align: center;
+}
+.slider-slides{
+    position: relative;
+    height: 400px;
+}
+.slider-slide{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease;
+}
+.slider-slide img{
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+    object-position: center;
+}
+.slider-slide.active{
+    opacity: 1;
+    visibility: visible;
+}
+.slider-btns{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 3rem;
+    font-weight: bold;
+}
+.slider a{
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: thin solid #000;
+    text-decoration: none;
+    background: #fff;
+    transition: all 0.3s ease;
+    color: #000;
+}
+
+/************** ScropllSpy ***********/
+@media (min-width: 1024px){
+    body{
+        display: grid;
+        grid-template-columns: 80% 20%;
+        grid-template-rows:  4rem auto;
+        grid-template-areas: 
+        "header header"
+        "main   panel";
+    }
+    main{
+        grid-area: main;
+    }
+    .header{
+        grid-area: header;
+    }
+    .panel{
+        grid-area: panel;
+        align-self: start;
+        position: sticky;
+        top: 4rem;
+        justify-content: flex-start;
+        background: var(--second-color);
+        transform: translate(0,0);
+        opacity: 1;
+        visibility: visible;
+    }
+    .panel-btn{
+        display: none;
+    }
+    .menu{
+        justify-content: start;
+        text-align: right;
+    }
+    .menu a{
+        font-size: 1rem;
+        padding: 0.75rem;
+    }
+
+    .menu a:hover,
+    .menu a.active{
+        color: var(--second-color);
+        background: var(--main-color);
+    }
+    .scroll-top-btn{
+        right: initial;
+        left: calc(4.25rem + 1vw);
+    }
 }
