--- a/DOM/css/dom_ejercicios.css
+++ b/DOM/css/dom_ejercicios.css
@@ -362,7 +362,7 @@ img{
     color: #fff;
     transition: all 800ms ease;
 }
-.contact-form-error-is-active{
+.contact-form-error.is-active{
     display: block;
     animation: show-message 1s 1 normal 0s ease-out both;
 }
