--- a/SPA/app/assets/style.css
+++ b/SPA/app/assets/style.css
@@ -54,6 +54,14 @@ img{
     border-radius: 0.25rem;
     font-size: 1rem;
 }
+
+.grid-fluid{
+    margin: 1rem auto;
+    max-width: 90%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+}
+
 .header{
     padding: 0.5rem;
     position: sticky;
@@ -65,4 +73,15 @@ img{
 .header > *{
     margin: 1rem auto;
 
+}
+
+.post-card{
+    margin: 1rem auto;
+    padding: 1rem;
+    width: 80%;
+    background-color: #eceff1;
+}
+.post-card p {
+    display: flex;
+    justify-content: space-between;
 }
